dtor/tests/pass/dtor.rs
use dtor::dtor;

/// Doc
#[dtor]
/// Doc
unsafe fn foo() {
}

#[::dtor::dtor]
unsafe fn bar() {
}

fn main() {
}
